--- a/wp-content/themes/twentyelevenumco/style.css
+++ b/wp-content/themes/twentyelevenumco/style.css
@@ -41,7 +41,6 @@ h4{
     font-weight: bold;
     line-height: 48px;
     padding-bottom: 30px;
-    text-decoration-line: underline;
 }
 h5{
     text-align: center;
@@ -149,14 +148,32 @@ h5{
     right: 3%;
     display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
     justify-content: flex-start;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: flex-start;
+        -ms-flex-pack: justify;
+            justify-content: flex-start;
     width: auto;
     height: 40px;
 }
 .contact{
     display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     flex-flow: row nowrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: row nowrap;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
     align-items: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     height: 40px;
 }
 .contact #text-adresse{
@@ -194,7 +211,15 @@ h5{
 #titre-container{
     display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     justify-content: center;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: center;
+        -ms-flex-pack: justify;
+            justify-content: center;
     align-items: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     position: absolute;
     left:0;
     right:0;
@@ -214,6 +239,7 @@ h5{
     color: #FFFFFF;
     text-align: center;
     text-shadow: 0px 0px 45px rgba(0,0,0,1);
+    margin:auto;
 }
 
 
@@ -256,7 +282,16 @@ h5{
 #qui-container{
     display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
     justify-content: space-around;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: justify;
+            justify-content: space-around;
 }
 
 /* Partie : "Prise en charge pluridisciplinaire" */
@@ -265,13 +300,30 @@ h5{
 #suivi-container{
     display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
     justify-content: space-between;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .suivi-description{
     display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
     align-items: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 200px;
 }
 
@@ -311,7 +363,15 @@ h5{
 .charte-list{
     display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
     align-content: flex-start;
+    -webkit-align-content: flex-start;
+    -ms-flex-line-pack: flex-start;
+        align-content: flex-start;
 }
 
 
@@ -322,7 +382,15 @@ h5{
     display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     font-size: 15px;
     justify-content: space-around;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: justify;
+            justify-content: space-around;
     align-items: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     background-color: #D3D3D3;
     text-align: left;
     padding: 20px 0 0 0;
@@ -335,14 +403,24 @@ h5{
     list-style-type: circle;
 }
 
-#site-generator #lien-information{
+#site-generator #info-importante{
+    display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    list-style: none;
+}
+
+#site-generator #info-importante ul{
     display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     list-style: none;
 }
 
-#site-generator #lien-information li{
-    height: 20px;
-    padding: 0 15px 0 15px;
+#site-generator #info-importante li{
+    height: auto;
+    padding: 0 15px;
 }
 
 #suivez-nous{
@@ -368,6 +446,7 @@ h5{
 */
 
 #cookies {
+    border-top: #FFFFFF 1px solid;
     background:#8bb73e;
     position: fixed;
     bottom:0;
@@ -377,7 +456,7 @@ h5{
 #cookies p {
     display:inline-block;
     color: #ffffff;
-    width: 95%;
+    width: auto;
 }
 #cookies button {
     background: #ffffff;
@@ -396,23 +475,46 @@ h5{
 .container-article{
     display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     flex-flow: row wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: row wrap;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
     justify-content: center;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: center;
+        -ms-flex-pack: justify;
+            justify-content: center;
     margin: 0 0 100px 0;
     height: auto;
 }
 
 .container-article h3:nth-child(1){
     width: 85%;
+    -webkit-box-ordinal-group: 1;  
+    -moz-box-ordinal-group: 1;     
+    -ms-flex-order: 1;     
+    -webkit-order: 1;  
     order: 1;
     font-weight: bold;
 }
 .container-article img:nth-child(2){
     box-shadow: 0px 0px 39px  rgba(0,0,0,0.40);
     margin-right: 20px;
-    order: 2;
+    -webkit-box-ordinal-group: 2;
+    -moz-box-ordinal-group: 2;
+    -ms-flex-order: 2;
+    -webkit-order: 2;
+    order: 2; 
+    width: 28vw;
+    height: 100%;
 }
 .container-article p:nth-child(3){
     width: 40%;
+    -webkit-box-ordinal-group: 3;  
+    -moz-box-ordinal-group: 3;     
+    -ms-flex-order: 3;     
+    -webkit-order: 3;  
     order: 3;
 }
 
@@ -423,24 +525,50 @@ h5{
 .container-article-inverse{
     display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     flex-flow: row wrap-reverse;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: row wrap-reverse;
+        -ms-flex-flow: row wrap-reverse;
+            flex-flow: row wrap-reverse;
     justify-content: center;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: center;
+        -ms-flex-pack: justify;
+            justify-content: center;
     margin: 0 0 100px 0;
     height: auto;
 }
 
 .container-article-inverse h3:nth-child(1){
     width: 85%;
+    -webkit-box-ordinal-group: 3;  
+    -moz-box-ordinal-group: 3;     
+    -ms-flex-order: 3;     
+    -webkit-order: 3;  
     order: 3;
     font-weight: bold;
 }
 .container-article-inverse img:nth-child(2){
     box-shadow: 0px 0px 39px  rgba(0,0,0,0.40);
     align-self: flex-end;
+    -webkit-align-self: flex-end;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
     margin-left: 20px;
+    -webkit-box-ordinal-group: 2;
+    -moz-box-ordinal-group: 2;
+    -ms-flex-order: 2;
+    -webkit-order: 2;
     order: 2;
+    width: 28vw;
+    height: 100%;
 }
 .container-article-inverse p:nth-child(3){
     width: 40%;
+    -webkit-box-ordinal-group: 1;  
+    -moz-box-ordinal-group: 1;     
+    -ms-flex-order: 1;     
+    -webkit-order: 1;  
     order: 1;
 }
 
@@ -452,8 +580,21 @@ h5{
 .container-type-operation{
     display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     justify-content: flex-start;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: flex-start;
+        -ms-flex-pack: justify;
+            justify-content: flex-start;
     align-items: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     flex-flow: column wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: column wrap;
+        -ms-flex-flow: column wrap;
+            flex-flow: column wrap;
     width: auto;
     height: 300px;
 }
@@ -467,10 +608,19 @@ h5{
 /*-----------------------------------------------------Page équipe-------------------------------------------*/
 
 .container-equipe{
-    height: 450px;
+    height: 530px;
     display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     flex-flow: column wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: column wrap;
+        -ms-flex-flow: column wrap;
+            flex-flow: column wrap;
     align-items: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .container-equipe img{
@@ -480,7 +630,8 @@ h5{
 
 .container-equipe p{
     margin-top: 10px;
-    font-size: 18px;
+    font-size: 90%;
+    width: 17%;
 }
 
 
@@ -492,54 +643,27 @@ h5{
 
 
 /*****************************************************************      Media Queries     **********************************************************/
-/* Ajustement en dessous de 1640 px de large */
-
-@media screen and (max-width: 1640px){
-    /*
-    *       Attributs globaux
-    */
-
-    .singular .entry-content{
-        width: 100%;
-    }
-
-    /*
-    *   Barre de navigation
-    */
-       
-   #access ul{
-        margin: 0 -7%;
-    }
-    #branding #logo{
-        left: 4%;
-    }
-    #toggle img{
-        height: 20px;
-        width: 20px;
-    }
-}
-
 
 /*---------------------------------------------------Partie permettant de cacher la barre de navigation mobile---------------*/
-@media screen and (min-width: 1300px) { 
+@media screen and (min-width: 1284px) { 
     #toggle {
         display: none;
     }
     #popout{
         display: none;
     }
-    .nav-menu {
+    .nav-menu{
         display: none;
     }
+
  
 } 
 
 /*----------------------------------------------------Partie responsive commune à la tablette et au mobile------------------------------*/
 
 @media screen and (max-width: 1284px){
-
-        /*
-        *       Barre de navigation mobile
+        /* 
+        *           Barre de navigation pour tablette portrait et mobile
         */
 
         #popout {    /* contient le menu mobile et tablette */
@@ -550,7 +674,6 @@ h5{
             color: white;
             top: 0;
             left: -17%;
-            overflow:auto;
         }
         
         #toggle { /* Icon pour la barre de navigation mobile et tablette */
@@ -566,6 +689,8 @@ h5{
         }
         
         #toggle img{
+            height: 20px;
+            width: 20px;
             margin: auto;
         }
         #toggle p{
@@ -576,7 +701,7 @@ h5{
         .nav-menu li { /* menu monile et tablette*/
             border-bottom:1px solid #eee; 
             padding:20px;
-            width:100%;
+            width:80%;
         }
         
         .nav-menu li:hover { 
@@ -588,16 +713,7 @@ h5{
             text-decoration:none;
             width:100%;
         }
-        
-        .nav-menu #contact-mobile{
-            padding-left: 77px;
-            font-size: 14px;
-            border-bottom: none;
-        }
-        
-        .nav-menu #contact-mobile:hover{
-            color: #FFFFFF;
-        }
+
 
         /*
         *       Footer
@@ -605,9 +721,17 @@ h5{
 
         #site-generator{
             flex-direction: column;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            -webkit-flex-direction: column;
+                -ms-flex-direction: column;
         }
         #site-generator ul{
             flex-direction: column;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            -webkit-flex-direction: column;
+                -ms-flex-direction: column;
             margin: 0;
             width: auto;
         }
@@ -617,13 +741,7 @@ h5{
             border-right: none;
             border-bottom: #FFFFFF 1px solid;
         }
-        #site-generator #lien-information{
-            padding: 30px 0;
-        }
-        #site-generator #lien-information li{
-            height: auto;
-            padding: 0;
-        }
+    
 
         #site-generator #lien-site{
             padding: 30px 0 30px 38px;
@@ -633,11 +751,53 @@ h5{
 }
 
 
+/*--------------------------------------------------------Partie responsive pour tablette orientation portrait-----------------------------------------------------*/
+
+@media only screen and (min-width : 768px) and (max-width : 1024px) and (orientation : portrait) {
+    
+    /*
+    *       Image header
+    */
+    #header_img {
+        height: 40vh;
+    }
+
+    #barre-principale{
+        display: none;
+    }
+
+}
+/*--------------------------------------------------------Partie responsive pour tablette orientation portrait-----------------------------------------------------*/
+
+@media only screen and (min-width : 768px) and (max-width : 1024px) and (orientation : landscape) {
+    /*
+    *           Barre de navigation ordinateur
+    */
+
+    #toggle{
+        display: none;
+    }
+    #popout{
+        display: none;
+    }
+    .nav-menu{
+        display: none;
+    }
+
+}
 
    
-/*--------------------------------------------------------Partie responsive pour tablette-----------------------------------------------------*/
+/*-------------------------------------------------------------Partie responsive pour tablette------------------------------------------------------------*/
 
-@media screen and (max-width: 1284px) and (min-width: 650px){
+@media screen and (max-width: 1284px) and (min-width: 700px){
+    #access ul{
+        margin: 0;
+    }
+
+    #access #logo{
+        left: 7%;
+    }
+
     /*
     *       Titre et sous-titres
     */
@@ -649,29 +809,8 @@ h5{
 
     #site-title{
         line-height: 49px;
-        font-size: 49px;
+        font-size: 42px;
     }
-
-    /*
-    *       Barre de navigation
-    */
-    #access #logo{   /* Logo du site */
-        display: none;
-    }
-
-    #container-contact{
-        display: none;
-    }
-
-    #barre-principale{
-        display: none;
-    }
-
-    #popout{
-        width: 320px;
-        left: -14%;
-    }
-
     /*
     *           Titre principal
     */
@@ -697,28 +836,30 @@ h5{
     */
 
    .container-article h3:nth-child(1){
+       width: 76%;
        font-size: 22px;
    }
    .container-article p:nth-child(3){
-       width: 82%;
+       width: 77%;
        font-size: 17px;
    }
    .container-article img:nth-child(2){
         margin: 15px 20px;
-        width: 68vw;
+        width: 50vw;
         height: 100%;
     }
 
     .container-article-inverse h3:nth-child(1){
+        width: 76%;
         font-size: 22px;
     }
    .container-article-inverse p:nth-child(3){
-         width: 82%;
+         width: 77%;
          font-size: 17px;
     }
     .container-article-inverse img:nth-child(2){
          margin: 15px 20px;
-         width: 68vw;
+         width: 50vw;
         height: 100%;
     }
     /*
@@ -744,8 +885,32 @@ h5{
     /*
     *       Footer
     */
+    #site-generator #info-importante{
+        display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
+        align-items: center;
+        flex-direction: column;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            -webkit-flex-direction: column;
+                -ms-flex-direction: column;
+        padding: 10px 0;
+    }
+    #site-generator #info-importante ul{
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: row;
+          -ms-flex-direction: row;
+        flex-direction: row;
+        justify-content: space-around;
+        padding: 15px 0;
+        width: 72%;
+    }
+    #site-generator #info-importante li{
+        height: auto;
+        padding: 12px 0;
+    }
 
-    #site-generator #lien-information{
+    #site-generator #info-importante{
         font-size: 22px;
     }
 
@@ -763,7 +928,7 @@ h5{
 
    
     
-   @media screen and (max-width: 650px) {
+   @media screen and (max-width: 700px) {
 
 
         /*
@@ -809,14 +974,12 @@ h5{
         }
 
         /*
-        *  Barre de navigation
+        *       Barre de navigation
         */
 
-        #access #logo{   /* Logo du site */
-            display: none;
-        }
+        
 
-        #container-contact{
+        #access #logo{   /* Logo du site */
             display: none;
         }
         
@@ -837,30 +1000,42 @@ h5{
        }
 
        /*
-       *       Page d'acceuil 
+       *        Page d'acceuil 
        */
 
        #qui-container{
            flex-direction: column-reverse;
            align-items: center;
+           -webkit-box-align: center;
+           -webkit-align-items: center;
+               -ms-flex-align: center;
+                   align-items: center;
        }
        #suivi-container{
            flex-direction: column;
            align-items: center;
+           -webkit-box-align: center;
+           -webkit-align-items: center;
+               -ms-flex-align: center;
+                   align-items: center;
        }
        .suivi-description{
         padding: 20px 0;
        }
 
        .charte-list{
-           flex-direction: column;
+            flex-direction: column;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            -webkit-flex-direction: column;
+                -ms-flex-direction: column;
        }
        .charte-list ul{
            padding: 20px 0;
        }
 
        /*
-       *       Page article
+       *       Page "article"
        */
 
        .container-article{
@@ -877,6 +1052,9 @@ h5{
        .container-article img:nth-child(2){
             margin: 15px 0;
             align-self: flex-end;
+            -webkit-align-self: flex-end;
+            -ms-flex-item-align: end;
+                align-self: flex-end;
         }
 
 
@@ -924,6 +1102,27 @@ h5{
             margin-top: 40px;
         }
  
+        /*
+        *           Footer
+        */
+        #site-generator #info-importante{
+            align-items: center;
+        }
+
+        #site-generator #info-importante ul{
+            flex-direction: column;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            -webkit-flex-direction: column;
+                -ms-flex-direction: column;
+                width: 51%;
+                padding: 20px 0;
+        }
+        #site-generator #info-importante li {
+            padding: 5px 0;
+        }
+        
+
         /*
         *       Barre cookies
         */
